# bycycle.webapi

./: .gitignore  .hgignore  CHANGELOG  MANIFEST.in  Makefile  README.txt  application.wsgi  base.ini  buildout.cfg  commands.cfg  commands.py  commands.toml  commands.yaml  deploy.cfg  development.ini  fabfile.py  production.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
ansible/: production  site.yaml
ansible/roles/base/vars/: main.yaml
ansible/roles/deploy/tasks/: main.yaml
ansible/roles/deploy/templates/: bycycle.conf.j2  bycycle.ini.j2
ansible/roles/dijkstar/meta/: main.yaml
ansible/roles/dijkstar/tasks/: main.yaml
ansible/roles/handlers/handlers/: main.yaml
ansible/roles/prepare/tasks/: main.yaml
ansible/roles/prepare/templates/: run.j2
ansible/roles/provision/files/: dijkstar.service
ansible/roles/provision/meta/: main.yaml
ansible/roles/provision/tasks/: main.yaml
byCycleTripPlanner.egg-info/: paste_deploy_config.ini_tmpl
bycycle/tripplanner/: __init__.py  app.py  helpers.py  websetup.py
bycycle/tripplanner/config/: environment.py  middleware.py  routing.py
bycycle/tripplanner/controllers/: error.py  geocodes.py  regions.py  routes.py  services.py  template.py
bycycle/tripplanner/lib/: app_globals.py  base.py  helpers.py  middleware.py
bycycle/tripplanner/public/javascripts/: bycycle.js  gmap.js  google.js  init.js  map.js  openlayers.js  query.js  regions.js  result.js  services.js  ui.js  util.js
bycycle/tripplanner/public/stylesheets/: base_ie.css  restler.css  tab-control.css
bycycle/tripplanner/resources/: __init__.py  directions.py  error.py  geocode.py  lookup.py  regions.py  route.py  service.py
bycycle/tripplanner/scripts/: development.py
bycycle/tripplanner/static/css/: base.css
bycycle/tripplanner/static/javascripts/: bycycle.js  (+10 more)
bycycle/tripplanner/templates/: _google_analytics.html  error.html  layout.html  news.html
bycycle/tripplanner/tests/: __init__.py
bycycle/tripplanner/views/: geocode.py  regions.py  route.py  service.py
bycycle/webapi/: __init__.py  cors.py  model.py  pshell.py  routes.py
bycycle/webapi/resources/: __init__.py  directions.py  error.py  info.py  lookup.py  service.py
bycycle/webapi/templates/: error.mako  home.html  home.mako
bycycle/webapi/views/: __init__.py  directions.py  error.py  info.py  lookup.py  map.py  query.py  service.py
config/: httpd.conf  subversion.conf  vhosts.conf
etc/: redirects.htaccess  static.htaccess
etc/init/: uwsgi.conf
etc/nginx/: bycycle.conf  nginx.conf  uwsgi_params
etc/nginx/conf.d/: apps.conf  bycycle.org.conf  info.bycycle.org.conf  wsgiapps.conf
etc/nginx/sites-available/: bycycle.org.conf
etc/uwsgi/: bycycle.ini
etc/uwsgi/apps-available/: bycycle.ini  bycycle.org.ini
script/: restart  start  stop  tail
service/: production.ini  serve.py
service/tripplanner-four/: run
service/tripplanner-one/: httpd-vhosts.conf  httpd.conf  run
service/tripplanner-three/: run
service/tripplanner-two/: run
service/tripplanner-two/log/: run
tripplanner/config/: environment.py  middleware.py  routing.py
tripplanner/controllers/: ads.py  error.py  geocodes.py  routes.py  services.py
tripplanner/docs/: index.txt
tripplanner/lib/: base.py  helpers.py
tripplanner/models/: __init__.py
tripplanner/public/javascripts/: ads.js  bycycle.js  gmap.js  map.js  openlayers.js  query.js  regions.js  result.js  services.js  ui.js  util.js
tripplanner/public/static/: _google_ads_for_results.html
tripplanner/public/stylesheets/: base.css  fixed-pane.css  print.css  tab-control.css
tripplanner/templates/: layout.html  news.html
tripplanner/templates/geocodes/: index.html  new.html
tripplanner/templates/regions/: index.html  portlandor.html
tripplanner/templates/routes/: 300.html  index.html  index.txt
tripplanner/templates/services/: errors.html  index.html  layout.html
tripplanner/tests/functional/: test_geocodes.py
(+68 files in other folders)
